@@ -5,9 +5,9 @@ files[] = tests/date_popup_authored_format.test
 package = Date/Time
 dependencies[] = date_popup
 
-; Information added by Drupal.org packaging script on 2014-08-17
-version = "7.x-1.1+4-dev"
+; Information added by Drupal.org packaging script on 2014-12-15
+version = "7.x-1.1+6-dev"
 core = "7.x"
 project = "date_popup_authored"
-datestamp = "1408294729"
+datestamp = "1418638685"
 
