@@ -1,0 +1,17 @@
+<?php
+
+/**
+ * Install, update, and uninstall functions for the Date Popup Authored module.
+ */
+
+/**
+ * Implements hook_uninstall().
+ */
+function date_popup_authored_uninstall() {
+  // Delete the variables created by Date Popup Authored.
+  foreach (node_type_get_types() as $node_type) {
+    variable_del('date_popup_authored_enabled_' . $node_type->type);
+    variable_del('date_popup_authored_format_' . $node_type->type);
+    variable_del('date_popup_authored_year_range_' . $node_type->type);
+  }
+}
