@@ -9,9 +9,9 @@ files[] = plugins/facetapi/adapter.inc
 files[] = plugins/facetapi/query_type_term.inc
 files[] = plugins/facetapi/query_type_date.inc
 
-; Information added by Drupal.org packaging script on 2014-12-11
-version = "7.x-1.13+18-dev"
+; Information added by Drupal.org packaging script on 2014-12-15
+version = "7.x-1.13+19-dev"
 core = "7.x"
 project = "search_api"
-datestamp = "1418319430"
+datestamp = "1418642018"
 
