@@ -27,9 +27,9 @@ files[] = includes/handler_sort.inc
 files[] = includes/plugin_cache.inc
 files[] = includes/query.inc
 
-; Information added by Drupal.org packaging script on 2014-12-11
-version = "7.x-1.13+18-dev"
+; Information added by Drupal.org packaging script on 2014-12-15
+version = "7.x-1.13+19-dev"
 core = "7.x"
 project = "search_api"
-datestamp = "1418319430"
+datestamp = "1418642018"
 
