@@ -34,9 +34,9 @@ files[] = includes/service.inc
 
 configure = admin/config/search/search_api
 
-; Information added by Drupal.org packaging script on 2014-12-11
-version = "7.x-1.13+18-dev"
+; Information added by Drupal.org packaging script on 2014-12-15
+version = "7.x-1.13+19-dev"
 core = "7.x"
 project = "search_api"
-datestamp = "1418319430"
+datestamp = "1418642018"
 
