@@ -1,5 +1,6 @@
 Search API 1.x, dev (xx/xx/xxxx):
 ---------------------------------
+- #2371099 by drunken monkey: Fixed display of active "Exclude" facets.
 - #1861134 by Cyberwolf, jackbravo, drunken monkey: Fixed indexing on multiple
   indexes with Drush.
 - #2347367 by drunken monkey, das-peter: Fixed forgotten usages of
